# VikVec

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  architecture_decision_mask_first.md  asset_taxonomy.md  extraction_rules.md  future_backends.md  naming_rules.md  repo_survey.md  roadmap.md  spike_plan_mask_tools.md  style_guide.md  vector_rebuild_rules.md
examples/: example_manifest.json
external_reference/: README.md
output/manifests/: detected_scenes_manifest.json  labelme_import_manifest.json  manifest_updated.json  manual_scene_manifest.json  reference_scene_manifest.json  test_manifest.json
spikes/assisted_mask_creation/: .gitignore  README.md  candidates.md  commands_log.md  notes.md  osam_headless_probe.py
spikes/labelme_polygon/: README.md  example_manifest_entry.json  notes.md
spikes/labelme_polygon/outputs/: reference_scene.json  scene_process_tanks_iso_01.json
spikes/sam_remove_background/: README.md  notes.md
spikes/segment_anything_annotator/: README.md  notes.md
tests/: test_cli.py  test_mask.py
vikvec/: __init__.py  background.py  cli.py  crop_assets.py  detect_scenes.py  image_inspect.py  labelme_import.py  manifest.py  mask.py
